# MPEG_encoder

./: README.md  REQUIREMENTS.txt  all_pixels.txt  hw.c  r.rgb  readImage.c  read_rgb.py
Android/app/: build.gradle.kts
Android/app/src/main/java/com/example/myapplication/: MainActivity.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Mpeg/: CMakeLists.txt  hello.cpp  hello.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
VideoConverterApp/: local.properties
VideoConverterApp/app/: build.gradle.kts
VideoConverterApp/app/src/main/: AndroidManifest.xml
VideoConverterApp/app/src/main/java/com/example/converterapp/: MainActivity.kt
VideoConverterApp/app/src/main/res/layout/: activity_main.xml
VideoConverterApp/app/src/main/res/values/: themes.xml
VideoConverterApp/gradle/: libs.versions.toml
VideoConverterApp/gradle/wrapper/: gradle-wrapper.properties
include/: countDir.h  createMLV.h  encoder.h  ffwt.h  huffmancoding.h  motionCompEst.h  mpeg1_encoder.h  processFrame.h  quantization.h  readImage.h  seperateMatrix.h  ycbcr_to_yuv420.h
src/: Encoder.code-workspace  countDir.c  createMLV.c  encoder  encoder.c  ffwt.c  huffmancoding.c  motionCompEst.c  mpeg1_encoder.c  output.out  processFrame.c  quantization.c  readImage.c  savebatch.py  seperateMatrix.c  writeGOP.c  ycbcr_to_yuv420.c
test/: VideoReader.c  createMLV_t.c  createVideo.c  fftw.c  huffmancoding.c  quantization_t.c  readImage  readImage.c  seperateMatrix_t.c  test.c
(+1 files in other folders)
